deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-dockerize
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vue-dockerize
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: vue-dockerize
    spec:
      containers:
        - name: vue-dockerize
          image: localhost:32000/vue-app
          ports:
            - containerPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-dockerize-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vue-dockerize-v2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: vue-dockerize-v2
    spec:
      containers:
        - name: vue-dockerize-v2
          image: localhost:32000/vue-app:v2
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: vue-dockerize
spec:
  selector:
    app: vue-dockerize
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: vue-dockerize-v2
spec:
  selector:
    app: vue-dockerize-v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
  - host: "web1.microk8s-vm"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vue-dockerize
            port:
              number: 80
  - host: "web2.microk8s-vm"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vue-dockerize-v2
            port:
              number: 80
